schedule saving to the next event cycle

notably since writing reading and applying
settings can cause a shortcut update which
itself triggers a save (of the partial-only
database)

But also since several changes can occur in
a row, so we don't write for everyone

BUG: 343891
FIXED-IN: 5.5